--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,15 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+# local env files
+.env.local
+.env.development.local
+.env.development
+.env.test.local
+.env.production.local
+.env.production
+
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -40,6 +49,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+/.pnp
+.pnp.js
 
 # TypeScript v1 declaration files
 typings/
@@ -71,12 +82,17 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+yarn.lock
+package-lock.json
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
 # Next.js build output
 .next
+/.next/
+/out/
+
 
 # Nuxt.js build / generate output
 .nuxt
