--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "cross-fetch": "^3.1.5",
     "next": "^12.1.4",
     "react": "^18.0.0",
+    "react-dnd": "^15.1.2",
+    "react-dnd-html5-backend": "^15.1.3",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
