--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@graphql-tools/graphql-file-loader": "^7.3.7",
     "@graphql-tools/load": "^7.5.6",
     "@graphql-tools/schema": "^8.3.6",
+    "@graphql-yoga/node": "^2.0.0",
     "@paljs/plugins": "^4.0.18",
     "@prisma/client": "^3.11.1",
     "cross-fetch": "^3.1.5",
@@ -35,7 +36,6 @@
     "env-cmd": "^10.1.0",
     "express": "^4.17.3",
     "graphql": "^16.3.0",
-    "graphql-postgres-subscriptions": "^1.0.5",
     "graphql-subscriptions": "^2.0.0",
     "graphql-yoga": "^2.0.0",
     "http-errors": "^2.0.0",
