prisma testing with mongoDB

--- a/backend/config/dev.env
+++ b/backend/config/dev.env
@@ -1,2 +1,2 @@
-DATABASE_URL=mongodb://admin:1234@127.0.0.1:27017/ikram-assignment
-HTTP_PORT=3001
+DATABASE_URL=mongodb://127.0.0.1:27017/IkramAssignment
+HTTP_PORT=6001
