--- a/backend/package.json
+++ b/backend/package.json
@@ -19,16 +19,18 @@
     "start": "env-cmd -f ./config/prod.env node dist/index.js",
     "migrate-deploy": "env-cmd -f ./config/prod.env npx prisma migrate deploy"
   },
+  "license": "MIT",
   "prisma": {
     "seed": "node prisma/seed.js"
   },
-  "license": "MIT",
+  "resolutions": {
+    "graphql": "^16.3.0"
+  },
   "dependencies": {
     "@apollo/client": "^3.5.10",
-    "@graphql-tools/graphql-file-loader": "^7.3.7",
-    "@graphql-tools/load": "^7.5.6",
-    "@graphql-tools/schema": "^8.3.6",
-    "@graphql-yoga/node": "^2.0.0",
+    "@graphql-tools/graphql-file-loader": "^7.3.3",
+    "@graphql-tools/load": "^7.4.1",
+    "@graphql-tools/schema": "^8.3.1",
     "@paljs/plugins": "^4.0.18",
     "@prisma/client": "^3.11.1",
     "cross-fetch": "^3.1.5",
@@ -37,7 +39,7 @@
     "express": "^4.17.3",
     "graphql": "^16.3.0",
     "graphql-subscriptions": "^2.0.0",
-    "graphql-yoga": "^2.0.0",
+    "graphql-yoga": "^1.18.3",
     "http-errors": "^2.0.0",
     "mkdirp": "^1.0.4",
     "nanoid": "^3.3.2",
