server configured and initial crud done

--- a/backend/config/dev.env
+++ b/backend/config/dev.env
@@ -1,2 +1,6 @@
-DATABASE_URL=mongodb://127.0.0.1:27017/IkramAssignment
+HTTP_HOSTNAME=localhost
 HTTP_PORT=6001
+
+MONGO_DB_HOSTNAME=localhost
+MONGO_DB_PORT=27017
+MONGO_DB_DATABASE=IkramAssignment
