--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
   },
   "license": "MIT",
   "resolutions": {
-    "graphql": "^15.7.2"
+    "graphql": "^15.7.2",
+    "graphql-upload": "^12.0.0"
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
