--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,19 @@
     "@badrap/bar-of-progress": "^0.1.2",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@hookform/resolvers": "^2.8.5",
+    "apollo-upload-client": "^16.0.0",
     "cross-fetch": "^3.1.5",
+    "graphql": "^16.0.1",
     "next": "^12.1.4",
     "react": "^18.0.0",
     "react-dnd": "^15.1.2",
     "react-dnd-html5-backend": "^15.1.3",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.22.5",
+    "react-waypoint": "^10.1.0",
+    "subscriptions-transport-ws": "^0.9.19",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
